--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
 node_modules/
-
-/client/build
-
-.DS_Store
-/client/.env.local
-/client/.ev.development.local
-/client/.env.test.local
-/client/.env.production.local
-
-npm-debug.log*
-yarn.debug.log*
-yarn-error.log*
+config/config.env
