added graph script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^2.9.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.4",
     "cross-env": "^6.0.3",
