--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "React App",
   "name": "Create React App Sample",
-  "icons": [],
+  "icons": "/src/img/healthbuddyBear.png",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
