--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "react-chartjs-2": "^2.8.0",
-    "slugify": "^1.3.6"
+    "slugify": "^1.3.6",
+    "uuid": "^3.3.3"
   }
 }
