--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "react-chartjs-2": "^2.8.0",
+    "react-moment": "^0.9.7",
+    "react-rangeslider": "^2.2.0",
     "slugify": "^1.3.6",
     "uuid": "^3.3.3"
   }
