--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-moment": "^0.9.7",
     "react-rangeslider": "^2.2.0",
+    "request": "^2.88.0",
     "slugify": "^1.3.6",
     "uuid": "^3.3.3"
   }
